tests/correct/fixtures/A.vrv
enum C { D }

let f = 42
