tests/errors/trailing_type.vrv
let foo = 1 {
  foo: t
}
